estructura de index.html

--- a/practica1/css/styles.css
+++ b/practica1/css/styles.css
@@ -9,3 +9,9 @@ h1{
 p{
     color: aqua;
 }
+body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
